cleared up more rubbish

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:        pretty
 title:            Mostly Harmless
 tagline:          'A blag about nothing in particular'
 description:      'A blog about nothing in particular by <a href="https://twitter.com/stuti90" target="_blank">@stuti90</a>.'
-url:              http://hyde.getpoole.com
+url:              http://stuti90.github.io
 
 author:
   name:           'Stuti Dhanvada'
