--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,19 @@ pygments:         true
 permalink:        pretty
 
 # Setup
-title:            Mostly Harmless
-tagline:          'A blag about nothing in particular'
-description:      'A blog about nothing in particular by <a href="https://twitter.com/stuti90" target="_blank">@stuti90</a>.'
-url:              http://stuti90.github.io
-
-author:
-  name:           'Stuti Dhanvada'
-  url:            https://twitter.com/stuti90
-
+title:            Lanyon
+tagline:          'A Jekyll theme'
+description:      'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+url:              http://lanyon.getpoole.com
+baseurl:          'http://stuti90.github.io/'
 paginate:         5
 
+author:
+  name:           'Mark Otto'
+  url:            https://twitter.com/mdo
+
 # Custom vars
+version:          1.0.0
+
+github:
+  repo:           https://github.com/poole/lanyon
